[gd_scene load_steps=6 format=3 uid="uid://brh1kde02jqy7"]

[ext_resource type="Script" uid="uid://b2bnh3hw2l3j1" path="res://coding/quiz_dialog.gd" id="1_6o0eh"]
[ext_resource type="PackedScene" uid="uid://cp6fsqk3ai5qh" path="res://coding/click_button.tscn" id="2_3dfn2"]
[ext_resource type="Texture2D" uid="uid://bmjan6873e3h5" path="res://Items/sprites/items.png" id="2_nklm2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bg5ba"]
atlas = ExtResource("2_nklm2")
region = Rect2(96, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tbdmk"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = SubResource("AtlasTexture_bg5ba")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0

[node name="QuizDialog" type="CanvasLayer"]
script = ExtResource("1_6o0eh")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.184314, 0.184314, 0.184314, 0.392157)

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 473.0
offset_bottom = 362.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_tbdmk")

[node name="Panel" type="Control" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/Panel"]
layout_mode = 0
offset_left = 26.0
offset_top = 43.0
offset_right = 337.0
offset_bottom = 151.0
text = "Câu hỏi"
autowrap_mode = 2

[node name="LanguageLabel" type="Label" parent="PanelContainer/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 18.0
text = "Ngôn ngữ"

[node name="VBoxContainer" type="HBoxContainer" parent="PanelContainer/Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 218.0
offset_right = 428.0
offset_bottom = 254.0

[node name="ClickButton" parent="PanelContainer/Panel/VBoxContainer" instance=ExtResource("2_3dfn2")]
layout_mode = 2

[node name="ClickButton2" parent="PanelContainer/Panel/VBoxContainer" instance=ExtResource("2_3dfn2")]
layout_mode = 2

[node name="ClickButton3" parent="PanelContainer/Panel/VBoxContainer" instance=ExtResource("2_3dfn2")]
layout_mode = 2

[node name="ClickButton4" parent="PanelContainer/Panel/VBoxContainer" instance=ExtResource("2_3dfn2")]
layout_mode = 2
